--- a/index.html
+++ b/index.html
@@ -889,16 +889,16 @@ footer a { color:var(--blue); text-decoration:none; }
 
 /* +10 / -10 buttons inside the active recovery timer */
 .rt-adj-row {
-  display:flex; align-items:center; gap:6px; flex-shrink:0;
+  display:flex; align-items:center; gap:8px; flex-shrink:0;
 }
 .rt-adj-btn {
-  height:28px; padding:0 9px; border-radius:7px;
+  min-height:44px; padding:0 16px; border-radius:10px;
   background:rgba(255,255,255,.06); border:1.5px solid var(--border);
   color:var(--text-sub); font-family:'Barlow Condensed', sans-serif;
-  font-size:12px; font-weight:800; letter-spacing:.5px; cursor:pointer;
+  font-size:15px; font-weight:800; letter-spacing:.5px; cursor:pointer;
   display:flex; align-items:center; justify-content:center;
   transition:all .15s; -webkit-user-select:none; user-select:none;
-  white-space:nowrap;
+  white-space:nowrap; touch-action:manipulation;
 }
 .rt-adj-btn:active { background:rgba(71,184,255,.2); border-color:var(--blue); color:var(--blue); transform:scale(.93); }
 
